--- a/portfolio.html
+++ b/portfolio.html
@@ -43,12 +43,15 @@
     <h3><u>Self Introduction</u></h3>
     <p>
         Hello connections, my name is "Khushboo Bhagat",a computer science aspirant.<br>
-        I am native of nagpur and i am currently pursuing B-tech in CSE at "Jhulelal institute of Technology, Lonara".<br>
-        I have learn few programming languages include C, html & Java respectively.<br>
-        My short term goal is to become a full-stack developer and my long term goal is to get a job in a reputated company to upskill my knowledge.<br> 
+        I am native of nagpur and i am currently pursuing B-tech degree in CSE Stream at "Jhulelal institute of Technology, Lonara".<br>
+        I have learn few programming languages include C, Html & Java respectively.<br>
+        My short term goal is to become a full-stack developer and <br> https://github.com/Khushboo6143/My-portfolio.gitmy long term goal is to get a job in a reputated company to upskill my knowledge.<br> 
     </p> 
     <hr>
     <h3><b><u>PROJECT DETAILS</u></b></h3>
+    <p>
+        <b>Project 1:</b>I have created and designed a portfolio using Html & CSS.
+        <br><b>Project 2:</b>I have just clone a google webpage.<br>https://github.com/Khushboo6143/My-portfolio.git</p>
     <a href="file:///C:/Users/Student/Desktop/html_css/task.html">GOOGLE CLONE</a>
     <br><br>
     Click Here
